[package]
name = "revaultpass"
version = "1.0.0"
edition = "2021"
description = "Private password manager with optional encryption"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
argon2 = "0.5"
chacha20poly1305 = "0.10"
rand = "0.8"
rpassword = "7.3"
directories = "5.0"
